2nd training/Community/Community/Community1/force-app/main/default/objects/Costing_Sheet__c/Costing_Sheet__c.object-meta.xml
<CustomObject>
    <label>Costing Sheet</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Costing Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costing Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>