2nd training/Community/Community/Community1/force-app/main/default/objects/Costing_Sheet__c/fields/Costing_Link__c.field-meta.xml
<CustomField>
    <fullName>Costing_Link__c</fullName>
    <label>Costing Link</label>
    <type>Url</type>
</CustomField>