2nd training/Community/Community/Community1/force-app/main/default/objects/Costing_Sheet__c/fields/Costing_Sheet_Id__c.field-meta.xml
<CustomField>
    <fullName>Costing_Sheet_Id__c</fullName>
    <label>Costing Sheet Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>