2nd training/Community/Community/Community1/force-app/main/default/objects/Costing_Sheet__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Costing Sheets</relationshipLabel>
    <relationshipName>Costing_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>