2nd training/Community/Community/Community1/force-app/main/default/objects/Costing_Sheet__c/fields/Revision_ID__c.field-meta.xml
<CustomField>
    <fullName>Revision_ID__c</fullName>
    <label>Revision ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>